Updated in parallel to new-site

--- a/illustrations.html
+++ b/illustrations.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <!-- HEADER NAV -->
-    <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans" id="scrollhead">
+    <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
       <nav class="f6">
         <div class="fl">
           <a class="link hover-gold black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
         <div class="fr">
-          <a class="link hover-gold black dib mr3" href="#" title="About">About</a>
-          <a class="link hover-gold black dib mr3" href="#" title="Contact">Contact</a>
-          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Resume">Resume</a>
+          <a class="link hover-gold black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
+          <a class="link hover-gold black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
     </header>
@@ -91,7 +91,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Breakout - Rocket League</h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">Breakout - Rocket League</h3>
         </span>
       </article>
 
@@ -102,7 +102,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">My response to the Apple + Google &#127828; debate</h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">My response to the Apple + Google &#127828; debate</h3>
         </span>
       </article>
     </section>
@@ -116,7 +116,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Inspired by <a href="https://dribbble.com/Frizler" target="_blank" class="no-underline gold dim">Anton Fritsler's</a> work</h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">Inspired by <a href="https://dribbble.com/Frizler" target="_blank" class="no-underline gold dim">Anton Fritsler's</a> work</h3>
         </span>
       </article>
 
@@ -127,7 +127,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">I still can't decide which to get...</h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">I still can't decide which to get...</h3>
         </span>
       </article>
 
@@ -138,7 +138,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Illustration for my article, <a href="https://medium.com/@alextrantheeman/juggling-my-skillset-46b3c149eda6" target="_blank" class="no-underline gold">Juggling My Skillset</a></h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">Illustration for my article, <a href="https://medium.com/@alextrantheeman/juggling-my-skillset-46b3c149eda6" target="_blank" class="no-underline gold">Juggling My Skillset</a></h3>
         </span>
       </article>
     </section>
@@ -152,7 +152,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Revisiting the low poly craze</h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">Revisiting the low poly craze</h3>
         </span>
       </article>
 
@@ -163,7 +163,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Genji, for all the Overwatch fans</h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">Genji, for all the Overwatch fans</h3>
         </span>
       </article>
     </section>
@@ -176,16 +176,16 @@
 
     <!-- FOOTER NAV -->
     <footer class="pv4 ph3 ph5-ns tc">
-      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
+      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="Will open Mail or Outlook &#128231;">
       <img src="https://icon.now.sh/email/22/000000" alt="email">
       </a>
-      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
+      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="Don't @ me">
         <img src="https://icon.now.sh/twitter/22/000000" alt="Twitter">
       </a>
-      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="Medium">
+      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="I write stuff">
         <img src="https://icon.now.sh/medium/22/000000" alt="medium">
       </a>
-      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Dribbble">
+      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Hit that like button!">
         <img src="https://icon.now.sh/dribbble/22/000000" alt="dribbble">
       </a>
       <small class="mt4 f6 db tc worksans">Alex Tran | Built with Tachyons</small>
