--- a/overwatch.html
+++ b/overwatch.html
@@ -15,9 +15,9 @@
           <a class="link hover-gold black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
         <div class="fr">
-          <a class="link hover-gold black dib mr3" href="#" title="About">About</a>
-          <a class="link hover-gold black dib mr3" href="#" title="Contact">Contact</a>
-          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Resume">Resume</a>
+          <a class="link hover-gold black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
+          <a class="link hover-gold black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
     </header>
@@ -33,7 +33,7 @@
     </section>
 
     <!-- DIVIDER -->
-    <div class="mv1 mv3-ns db w-10 center">
+    <div class="mv1 mv3-ns db w-third center">
       <div class="bt tc db b--moon-gray">
       </div>
     </div>
@@ -75,7 +75,7 @@
     </section>
 
     <!-- DIVIDER -->
-    <div class="mv1 mv3-ns db w-10 center">
+    <div class="mv1 mv3-ns db w-third center">
       <div class="bt tc db b--moon-gray">
       </div>
     </div>
@@ -87,7 +87,7 @@
     <!-- FIRST ROW -->
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <!-- HAMBURGER PIECE -->
-      <article class="fl w-100 w-50-m w-100-ns ph3 ph2-ns">
+      <article class="fl w-100 w-50-m w-100-ns">
         <span class="ph2 ph0-ns pb3 db">
           <h3 class="f4 f3-ns mb0 black-90 sourceserif">Getting traction</h3>
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">My response to the Apple + Google &#127828; debate</h3>
@@ -99,10 +99,10 @@
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <article class="w-100 ph3 ph2-ns">
         <span class="fl ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="dribbblification.html">&#128072; Back</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="dribbblification.html" title="Dribbblification">&#128072; Back</a>
         </span>
         <span class="fr ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="upcoming.html">Next &#128073;</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="upcoming.html" title="Up + Coming">Next &#128073;</a>
         </span>
       </article>
     </section>
@@ -115,16 +115,16 @@
 
     <!-- FOOTER NAV -->
     <footer class="pv4 ph3 ph5-ns tc">
-      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
+      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="Will open Mail or Outlook &#128231;">
       <img src="https://icon.now.sh/email/22/000000" alt="email">
       </a>
-      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
+      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="Don't @ me">
         <img src="https://icon.now.sh/twitter/22/000000" alt="Twitter">
       </a>
-      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="Medium">
+      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="I write stuff">
         <img src="https://icon.now.sh/medium/22/000000" alt="medium">
       </a>
-      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Dribbble">
+      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Hit that like button!">
         <img src="https://icon.now.sh/dribbble/22/000000" alt="dribbble">
       </a>
       <small class="mt4 f6 db tc worksans">Alex Tran | Built with Tachyons</small>
