--- a/teammatic.html
+++ b/teammatic.html
@@ -26,8 +26,8 @@
       <div class="cover bg-left bg-center-l">
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
-          <h1 class="f2 f1-l fw9 mb0 lh-title">Oppia</h1>
-          <h2 class="fw1 f3 mt3">Open-source, interactive learning for all.</h2>
+          <h1 class="f2 f1-l fw9 mb0 lh-title">Teammatic</h1>
+          <h2 class="fw1 f3 mt3">A team formation UI tool for instructors</h2>
         </div>
       </div>
     </section>
@@ -42,16 +42,9 @@
       <!-- PROJECT OVERVIEW -->
       <article class="fl w-100 w-50-m w-60-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
-          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Overview</h3>
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
-            Oppia is an open-source, interactive online learning site that aims to create a community of everyday learners by allowing users to both teach and learn from each other.
-
-            <br /><br />
-            The lesson plans in its current state were often confusing to navigate through. My job was to conduct usability tests and&mdash;from the insights gathered&mdash;redesign the existing interface to be more user-friendly.
-
-            <br /><br />
-            One of the secondary goals was to bring the existing design system up-to-date so we could build a more unified design language.
-          </h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">tl;dr</span></span><br />I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a system for efficiently creating teams given a series of customizable constraints.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">What was a challenge?</span><br />Accepting that perfect teams are impossible. However, we learned that instructors are generally happy with auto-generated teams, as long as they had freedom and flexibility to make changes.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">What are the next steps?</span><br />It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback.</h3>
         </span>
       </article>
 
@@ -60,22 +53,22 @@
         <span class="ph2 ph0-ns pb3 link db">
           <div>
             <h3 class="f5 f5-ns ttu mb0 black-90 sourceserif">Organization</h3>
-            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Oppia Learning Foundation</h3>
+            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">UCSD Design Lab</h3>
           </div>
           <div>
             <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Platform</h3>
-            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Mobile Web</h3>
+            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Desktop</h3>
           </div>
           <div>
             <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Position</h3>
-            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">UX Researcher + Designer (out of 3)</h3>
+            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Sole UX Designer</h3>
           </div>
           <div>
             <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Duration</h3>
-            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">6 months&mdash;ongoing</h3>
+            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">3 months</h3>
           </div>
           <div>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-gold" href="http://oppia.org" target="_blank">Visit Site</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-gold" href="https://invis.io/JZCWS2XNQ" target="_blank">Invision</a>
             <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link hover-green ba b--black-05 br2" href="#0" target="_blank">Read Case Study</a>
           </div>
         </span>
@@ -89,17 +82,46 @@
     </div>
 
     <section class="fullest-container">
-      <img src="images/upcominglanding-2.png" />
+      <img src="images/Teammatic-1.png" />
     </section>
 
     <!-- FIRST ROW -->
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <!-- HAMBURGER PIECE -->
-      <article class="fl w-100 w-50-m w-100-ns">
+      <article class="fl w-100-ns">
         <span class="ph2 ph0-ns pb3 db">
-          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Another Podcast?</h3>
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">My response to the Apple + Google &#127828; debate</h3>
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Design details</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Teammatic handles student availability, leadership attribute, gender, role distribution, and student preferences for possible teammates. Once the data is received, instructors will have the ability to choose constraints of how they want to create teams. After a suggested group of teams have been formed, the instructor will have the ability to modify these teams to their liking.</h3>
         </span>
+      </article>
+
+      <section class="fullest-container">
+        <img src="images/teamiteration.png" class="br2 shadow"/>
+      </section>
+      <span class="ph2 ph0-ns pb3 link db tc">
+        <h3 class="f6 fw4 mt2 black-60 worksans">Iterations: transitioning from 3-columns to 2-columns</h3>
+      </span>
+    </section>
+
+    <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
+      <!-- PROJECT OVERVIEW -->
+      <article class="fl w-100 w-50-m w-50-ns">
+        <span class="ph2 ph0-ns pb3-ns db">
+          <h3 class="f6 f5-ns fw6 black-90 worksans lh-copy pr3-ns">Student Swap Process (v1.0)</h3>
+          <h3 class="f6 f5-ns fw4 black-60 worksans lh-copy pr3-ns">
+            We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.
+          </h3>
+          <h3 class="f6 f5-ns fw4 black-60 worksans lh-copy pr3-ns">
+            We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.
+          </h3>
+        </span>
+      </article>
+
+      <!-- PROJECT DETAILS -->
+      <article class="fl w-100 w-50-m w-50-ns pl4-l">
+        <section class="fullest-container">
+          <img src="images/swap.png" class="br2 shadow"/>
+        </section>
       </article>
     </section>
 
@@ -107,10 +129,10 @@
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <article class="w-100 ph3 ph2-ns">
         <span class="fl ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="index.html">&#128072; Home</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="oppia.html" title="Oppia">&#128072; Back</a>
         </span>
         <span class="fr ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="teammatic.html">Next &#128073;</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-gold ba b--black-05 br2 ttu" href="fitted.html" title="Fitted">Next &#128073;</a>
         </span>
       </article>
     </section>
