--- a/upcoming.html
+++ b/upcoming.html
@@ -15,9 +15,9 @@
           <a class="link hover-gold black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
         <div class="fr">
-          <a class="link hover-gold black dib mr3" href="#" title="About">About</a>
-          <a class="link hover-gold black dib mr3" href="#" title="Contact">Contact</a>
-          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Resume">Resume</a>
+          <a class="link hover-gold black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
+          <a class="link hover-gold black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
     </header>
@@ -33,7 +33,7 @@
     </section>
 
     <!-- DIVIDER -->
-    <div class="mv1 mv3-ns db w-10 center">
+    <div class="mv1 mv3-ns db w-third center">
       <div class="bt tc db b--moon-gray">
       </div>
     </div>
@@ -78,7 +78,7 @@
     </section>
 
     <!-- DIVIDER -->
-    <div class="mv1 mv3-ns db w-10 center">
+    <div class="mv1 mv3-ns db w-third center">
       <div class="bt tc db b--moon-gray">
       </div>
     </div>
@@ -153,16 +153,16 @@
 
     <!-- FOOTER NAV -->
     <footer class="pv4 ph3 ph5-ns tc">
-      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
+      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="Will open Mail or Outlook &#128231;">
       <img src="https://icon.now.sh/email/22/000000" alt="email">
       </a>
-      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
+      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="Don't @ me">
         <img src="https://icon.now.sh/twitter/22/000000" alt="Twitter">
       </a>
-      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="Medium">
+      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="I write stuff">
         <img src="https://icon.now.sh/medium/22/000000" alt="medium">
       </a>
-      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Dribbble">
+      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Hit that like button!">
         <img src="https://icon.now.sh/dribbble/22/000000" alt="dribbble">
       </a>
       <small class="mt4 f6 db tc worksans">Alex Tran | Built with Tachyons</small>
