--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
           <a class="link hover-gold black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
         <div class="fr">
-          <a class="link hover-gold black dib mr3" href="about.html" title="About">About</a>
-          <a class="link hover-gold black dib mr3" href="#" title="Contact">Contact</a>
-          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Resume">Resume</a>
+          <a class="link hover-gold black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
+          <a class="link hover-gold black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
     </header>
+
     <section class="worksans dt w-100 ph4-ns pv4 pv6-ns ph0-l center">
       <div class="cover bg-left bg-center-l">
         <!-- HERO LANDING -->
@@ -51,7 +52,7 @@
       </article>
 
       <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
-        <a href="#0">
+        <a href="teammatic.html">
           <div class="aspect-ratio aspect-ratio--4x3 dim point">
             <img style="background-image:url(images/Teammatic.png);"
             class="db bg-center cover aspect-ratio--object" />
@@ -159,16 +160,16 @@
     </div>
 
     <footer class="pv4 ph3 ph5-ns tc">
-      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
+      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="Will open Mail or Outlook &#128231;">
       <img src="https://icon.now.sh/email/22/000000" alt="email">
       </a>
-      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
+      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="Don't @ me">
         <img src="https://icon.now.sh/twitter/22/000000" alt="Twitter">
       </a>
-      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="Medium">
+      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="I write stuff">
         <img src="https://icon.now.sh/medium/22/000000" alt="medium">
       </a>
-      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Dribbble">
+      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Hit that like button!">
         <img src="https://icon.now.sh/dribbble/22/000000" alt="dribbble">
       </a>
       <small class="mt4 f6 db tc worksans">Alex Tran | Built with Tachyons</small>
