Added link to Teammatic

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
-        <span href="#0" class="ph2 ph0-ns pb3 link db">
+        <span href="teammatic.html" class="ph2 ph0-ns pb3 link db">
           <h3 class="f4 f3-ns mb0 black-90 sourceserif">Teammatic</h3>
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Constraint-based UI tool for team formation</h3>
         </span>
