CHANGED ALL HOVERS TO ORANGE

--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
     <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
       <nav class="f6">
         <div class="fl">
-          <a class="link hover-gold black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
+          <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
         <div class="fr">
-          <a class="link hover-gold black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
-          <a class="link hover-gold black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
-          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
+          <a class="link hover-orange black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
+          <a class="link hover-orange black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-orange black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
     </header>
@@ -53,8 +53,8 @@
 
             Oh, and I am most definitely looking for full-time work! Let me help you create valuable experiences &#128521;
           </h3>
-          <a class="f6 fw6 ttu mt3 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link hover-gold ba b--black-05 br2" href="#0" target="_blank">Get in touch</a>
-          <a class="f6 fw6 ttu mt3 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link hover-gold ba b--black-05 br2" href="AlexWTran_Resume.pdf" target="_blank">View my resume</a>
+          <a class="f6 fw6 ttu mt3 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link hover-orange ba b--black-05 br2" href="#0" target="_blank">Get in touch</a>
+          <a class="f6 fw6 ttu mt3 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link hover-orange ba b--black-05 br2" href="AlexWTran_Resume.pdf" target="_blank">View my resume</a>
         </span>
       </article>
 
