--- a/illustrations.html
+++ b/illustrations.html
@@ -12,12 +12,12 @@
     <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
       <nav class="f6">
         <div class="fl">
-          <a class="link hover-gold black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
+          <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
         <div class="fr">
-          <a class="link hover-gold black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
-          <a class="link hover-gold black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
-          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
+          <a class="link hover-orange black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
+          <a class="link hover-orange black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-orange black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
     </header>
@@ -47,7 +47,7 @@
             Digital art has always fascinated me and it was something I wanted to get better at. So I challenged myself: use only the shape and pen tools. And even more so, only work with Figma.
 
             <br /><br />
-            I was (and still am) really inspired by some of the great illustrators&mdash; names like <a href="https://dribbble.com/megdraws" target="_blank" class="no-underline gold dim">Meg Roubichard</a> and <a href="https://dribbble.com/meredithschomburg" target="_blank" class="no-underline gold dim">Meredith Schomburg</a>. Their influences are noticeable in some of my illustrations.
+            I was (and still am) really inspired by some of the great illustrators&mdash; names like <a href="https://dribbble.com/megdraws" target="_blank" class="no-underline orange dim">Meg Roubichard</a> and <a href="https://dribbble.com/meredithschomburg" target="_blank" class="no-underline orange dim">Meredith Schomburg</a>. Their influences are noticeable in some of my illustrations.
             <br /><br />
             Hope you enjoy! &#128077;
           </h3>
@@ -70,7 +70,7 @@
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Figma, Pen &amp; Paper</h3>
           </div>
           <div>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 no-underline mid-gray worksans link hover-gold br2" href="https://dribbble.com/awtran">View more work</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 no-underline mid-gray worksans link hover-orange br2" href="https://dribbble.com/awtran">View more work</a>
           </div>
         </span>
       </article>
@@ -116,7 +116,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 fw4 mt2 black-60 worksans">Inspired by <a href="https://dribbble.com/Frizler" target="_blank" class="no-underline gold dim">Anton Fritsler's</a> work</h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">Inspired by <a href="https://dribbble.com/Frizler" target="_blank" class="no-underline orange dim">Anton Fritsler's</a> work</h3>
         </span>
       </article>
 
@@ -138,7 +138,7 @@
           class="db bg-center cover aspect-ratio--object" />
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
-          <h3 class="f6 fw4 mt2 black-60 worksans">Illustration for my article, <a href="https://medium.com/@alextrantheeman/juggling-my-skillset-46b3c149eda6" target="_blank" class="no-underline gold">Juggling My Skillset</a></h3>
+          <h3 class="f6 fw4 mt2 black-60 worksans">Illustration for my article, <a href="https://medium.com/@alextrantheeman/juggling-my-skillset-46b3c149eda6" target="_blank" class="no-underline orange">Juggling My Skillset</a></h3>
         </span>
       </article>
     </section>
@@ -164,6 +164,18 @@
         </div>
         <span class="ph2 ph0-ns pb3 link db tc">
           <h3 class="f6 fw4 mt2 black-60 worksans">Genji, for all the Overwatch fans</h3>
+        </span>
+      </article>
+    </section>
+
+    <!-- FOOTER NAVIGATION -->
+    <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
+      <article class="w-100 ph3 ph2-ns">
+        <span class="fl ph2 ph0-ns db">
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="upcoming.html" title="Up + Coming">&#128072; Back</a>
+        </span>
+        <span class="fr ph2 ph0-ns db">
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="index.html" title="Back to home">Home &#128073;</a>
         </span>
       </article>
     </section>
