--- a/teammatic.html
+++ b/teammatic.html
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
+    <section class="cf w-100 pv3 pv4-ns ph3 ph4-m ph5-l mw8 center">
       <!-- PROJECT OVERVIEW -->
       <article class="fl w-100 w-50-m w-60-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
@@ -86,7 +86,7 @@
     </section>
 
     <!-- FIRST ROW -->
-    <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
+    <section class="cf w-100 pv3 pv4-ns ph3 ph4-m ph5-l mw8 center">
       <!-- HAMBURGER PIECE -->
       <article class="fl w-100-ns">
         <span class="ph2 ph0-ns pb3 db">
@@ -103,16 +103,13 @@
       </span>
     </section>
 
-    <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
+    <section class="cf w-100 ph3 pv3-ns ph4-m ph5-l mw8 center">
       <!-- PROJECT OVERVIEW -->
       <article class="fl w-100 w-50-m w-50-ns">
         <span class="ph2 ph0-ns pb3-ns db">
-          <h3 class="f6 f5-ns fw6 black-90 worksans lh-copy pr3-ns">Student Swap Process (v1.0)</h3>
-          <h3 class="f6 f5-ns fw4 black-60 worksans lh-copy pr3-ns">
-            We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.
-          </h3>
-          <h3 class="f6 f5-ns fw4 black-60 worksans lh-copy pr3-ns">
-            We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Student Swap Process (v1.0)</span></span><br />We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60">
+            Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.
           </h3>
         </span>
       </article>
@@ -123,6 +120,29 @@
           <img src="images/swap.png" class="br2 shadow"/>
         </section>
       </article>
+    </section>
+
+    <section class="cf w-100 ph3 pv3-ns ph4-m ph5-l mw8 center">
+      <!-- HAMBURGER PIECE -->
+      <article class="fl w-100-ns">
+        <span class="ph2 ph0-ns pb3-ns db">
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60">
+            <span class="fw6 black-90">Constraint Modal (v0.3), (v0.6), (v1.0)</span>
+            <br />
+            Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost.
+          </h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60">
+            The iterations helped us address the issue of compatibility across students, allowing instructors to easily generate teams based on specific constraints.
+          </h3>
+        </span>
+      </article>
+
+      <section class="fullest-container">
+        <img src="images/teamiteration.png" class="br2 shadow"/>
+      </section>
+      <span class="ph2 ph0-ns pb3 link db tc">
+        <h3 class="f6 fw4 mt2 black-60 worksans">Don't mind the varying modal sizes...</h3>
+      </span>
     </section>
 
     <!-- FOOTER NAVIGATION -->
