Add button fills, larger nav text, de-buttonified the section headers in index.thml

--- a/illustrations.html
+++ b/illustrations.html
@@ -10,7 +10,7 @@
   <body>
     <!-- HEADER NAV -->
     <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
-      <nav class="f6">
+      <nav class="f5-ns f6">
         <div class="fl">
           <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
@@ -70,7 +70,7 @@
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Figma, Pen &amp; Paper</h3>
           </div>
           <div>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 no-underline mid-gray worksans link hover-orange br2" href="https://dribbble.com/awtran">View more work</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 no-underline mid-gray worksans link br2 hover-white bg-animate hover-bg-orange" href="https://dribbble.com/awtran">View more work</a>
           </div>
         </span>
       </article>
@@ -172,10 +172,10 @@
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <article class="w-100 ph3 ph2-ns">
         <span class="fl ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="upcoming.html" title="Up + Coming">&#128072; Back</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="upcoming.html" title="Up + Coming">&#128072; Back</a>
         </span>
         <span class="fr ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="index.html" title="Back to home">Home &#128073;</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="index.html" title="Back to home">Home &#128073;</a>
         </span>
       </article>
     </section>
