--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
-      <nav class="f6">
+      <nav class="f5-ns f6">
         <div class="fl">
           <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
@@ -33,7 +33,7 @@
 
     <div class="mv1 mv4-ns db">
       <div class="bt tc db b--moon-gray">
-        <p class="pv2 ph3 bg-white dib shadow b--black-10 br2 sans-serif no-underline fw6 mid-gray f6 ttu worksans" style="transform: translateY(-100%)">View my work</p>
+        <p class="pv2 ph3 bg-almost-white dib ba b--moon-gray br2 sans-serif no-underline black-30 f6 ttl worksans" style="transform: translateY(-100%)">View my work</p>
       </div>
     </div>
 
@@ -93,7 +93,7 @@
 
     <div class="mv1 mv4-ns db">
       <div class="bt tc db b--moon-gray">
-        <p class="pv2 ph3 bg-white dib shadow b--black-10 br2 sans-serif no-underline fw6 mid-gray f6 ttu worksans" style="transform: translateY(-100%)">View my projects</p>
+        <p class="pv2 ph3 bg-almost-white dib ba b--moon-gray br2 sans-serif no-underline black-30 f6 ttl worksans" style="transform: translateY(-100%)">View my projects</p>
       </div>
     </div>
 
