--- a/upcoming.html
+++ b/upcoming.html
@@ -10,7 +10,7 @@
   <body>
     <!-- HEADER NAV -->
     <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
-      <nav class="f6">
+      <nav class="f5-ns f6">
         <div class="fl">
           <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
@@ -70,8 +70,8 @@
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Bi-weekly episodes</h3>
           </div>
           <div>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-orange" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415?mt=2" target="_blank">Listen on iTunes</a>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link hover-light-purple ba b--black-05 br2" href="https://spectrum.chat/up-coming" target="_blank">Join on Spectrum</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-white bg-animate hover-bg-orange" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415?mt=2" target="_blank">Listen on iTunes</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-light-purple" href="https://spectrum.chat/up-coming" target="_blank">Join on Spectrum</a>
           </div>
         </span>
       </article>
@@ -137,10 +137,10 @@
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <article class="w-100 ph3 ph2-ns">
         <span class="fl ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="overwatch.html">&#128072; Back</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="overwatch.html">&#128072; Back</a>
         </span>
         <span class="fr ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="illustrations.html">Next &#128073;</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="illustrations.html">Next &#128073;</a>
         </span>
       </article>
     </section>
