--- a/overwatch.html
+++ b/overwatch.html
@@ -10,7 +10,7 @@
   <body>
     <!-- HEADER NAV -->
     <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
-      <nav class="f6">
+      <nav class="f5-ns f6">
         <div class="fl">
           <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
@@ -27,7 +27,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">Overwatch Team Builds</h1>
-          <h2 class="fw1 f3 mt3">Quickly find the best team compositions for any map, any game mode.</h2>
+          <h2 class="fw1 f3 mt3">Quickly find the best team compositions for any map, any game mode</h2>
         </div>
       </div>
     </section>
@@ -68,7 +68,7 @@
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Sketch, Framer</h3>
           </div>
           <div>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link hover-green ba b--black-05 br2" href="#0" target="_blank">Read Case Study</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-green" href="#0" target="_blank">Read Case Study</a>
           </div>
         </span>
       </article>
@@ -99,10 +99,10 @@
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <article class="w-100 ph3 ph2-ns">
         <span class="fl ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="dribbblification.html" title="Dribbblification">&#128072; Back</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="dribbblification.html" title="Dribbblification">&#128072; Back</a>
         </span>
         <span class="fr ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link hover-orange ba b--black-05 br2 ttu" href="upcoming.html" title="Up + Coming">Next &#128073;</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="upcoming.html" title="Up + Coming">Next &#128073;</a>
         </span>
       </article>
     </section>
